--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -17,9 +17,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MSSV: 21880005\n",
+    "MSSV: **21880005**\n",
     "\n",
-    "Họ và tên: Phạm Tuấn Anh"
+    "Họ và tên: **Phạm Tuấn Anh**"
    ]
   },
   {
@@ -41,27 +41,54 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Kết quả 2^60 là: 1152921504606846976\n"
-     ]
-    }
-   ],
+   "source": [
+    "<b>Thu ket qua </b>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "result = 0\n",
     "for i in range(60):\n",
     "    if i == 0:\n",
     "        result+=2\n",
     "    else:\n",
-    "        result*=2\n",
-    "\n",
-    "print(f'Kết quả 2^60 là: {result}')"
+    "        result*=2\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "Kết quả 2^60 là:\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1152921504606846976"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
@@ -74,9 +101,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from fractions import Fraction as F"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Câu a:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nhap=(10+3/7)/(5+3/14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nhap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kq=F((10+F(3/7)),(5+F(3/14)))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Kết quả:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kq)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
