--- a/21880005.ipynb
+++ b/21880005.ipynb
@@ -126,6 +126,16 @@
     "    avg_all+=(avg_member(scores_all[i]))\n",
     "avg_all"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_member2(member):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -144,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "vscode": {
    "interpreter": {
