--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "1152921504606846976"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -325,10 +325,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happy birthday to tony. \n",
+      "Happybirtday to tony\n",
+      "Happy birthday, happy birthday, happy birthday to tony\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"Tên: \")\n",
+    "print(f\"Happy birthday to {name}. \\nHappybirtday to {name}\\nHappy birthday, happy birthday, happy birthday to {name}\")"
+   ]
   },
   {
    "attachments": {},
@@ -342,8 +355,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to interrupt the Kernel. \n",
+      "No kernel associated with the notebook. \n",
+      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "grade = float(input('Nhập điểm thí sinh:'))\n",
+    "def Xeploai(hocluc:str,dat:bool):\n",
+    "    XL=''\n",
+    "    if dat==True:\n",
+    "        XL='Đạt'\n",
+    "    else:\n",
+    "        XL='Không đạt'\n",
+    "    return print(f'Học lực: {hocluc} - {dat}')\n",
+    "print(f'Điểm nhập:{grade}')\n",
+    "if grade>10.0:\n",
+    "    print(\"Kiểm tra lại điểm nhập\")\n",
+    "elif grade >=9:\n",
+    "   Xeploai('Xuất sắc',True)\n",
+    "elif grade >=8:\n",
+    "    Xeploai('Giỏi',True)\n",
+    "elif grade >=7:\n",
+    "    Xeploai('Khá', True)\n",
+    "elif grade >=6:\n",
+    "    Xeploai('Trung Bình Khá', True)\n",
+    "elif grade >=5:\n",
+    "    Xeploai('Trung Bình',True)\n",
+    "elif grade >=4:\n",
+    "    Xeploai('Yếu',False)\n",
+    "else:\n",
+    "    Xeploai('Kém',False)"
+   ]
   },
   {
    "attachments": {},
