--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -332,9 +332,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Happy birthday to tony. \n",
-      "Happybirtday to tony\n",
-      "Happy birthday, happy birthday, happy birthday to tony\n"
+      "Happy birthday to Anh pham. \n",
+      "Happybirtday to Anh pham\n",
+      "Happy birthday, happy birthday, happy birthday to Anh pham\n"
      ]
     }
    ],
@@ -353,17 +353,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to interrupt the Kernel. \n",
-      "No kernel associated with the notebook. \n",
-      "View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Điểm nhập:1.5\n",
+      "Học lực: Kém - Không đạt\n"
      ]
     }
    ],
@@ -375,7 +373,7 @@
     "        XL='Đạt'\n",
     "    else:\n",
     "        XL='Không đạt'\n",
-    "    return print(f'Học lực: {hocluc} - {dat}')\n",
+    "    return print(f'Học lực: {hocluc} - {XL}')\n",
     "print(f'Điểm nhập:{grade}')\n",
     "if grade>10.0:\n",
     "    print(\"Kiểm tra lại điểm nhập\")\n",
@@ -415,10 +413,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "string=str(input('Nhập chuỗi số'))\n",
+    "liststring=list(string)\n",
+    "result=0\n",
+    "for i in range(len(liststring)):\n",
+    "    result = result + int(liststring[i])\n",
+    "print(result)"
+   ]
   },
   {
    "attachments": {},
