--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -443,10 +443,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '*'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(size):\n\u001b[1;32m      7\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m j\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39mi:\n\u001b[0;32m----> 8\u001b[0m             triashape[i][j]\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m*\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(triashape)\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '*'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "shape = int(input('Hình bạn muốn vẽ (thứ tự từ 1-4 tương tự thứ tự trong đề):'))\n",
+    "size = int(input('Số dòng (số dòng là số lẽ lớn hơn 2)'))\n",
+    "\n",
+    "triashape = np.zeros((3,3), dtype=int)\n",
+    "for i in range(size):\n",
+    "    for j in range(size):\n",
+    "        if j>=i:\n",
+    "            triashape[i][j]=\n",
+    "print(triashape)\n",
+    "# def showShape(Matrixshape:np.array):\n",
+    "#     for i in Matrixshape.shape()\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "attachments": {},
