--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -713,12 +713,12 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -732,41 +732,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        *\n",
-      "       **\n",
-      "      ***\n",
-      "     ****\n",
-      "    *****\n",
-      "   ******\n",
-      "  *******\n",
-      " ********\n",
+      "     \n",
+      "    *\n",
+      "   ***\n",
+      "  *****\n",
+      " *******\n",
       "*********\n",
-      "        *********\n",
-      "       *********\n",
-      "      *********\n",
-      "     *********\n",
-      "    *********\n",
-      "   *********\n",
-      "  *********\n",
-      " *********\n",
-      "*********\n",
-      "*                *\n",
-      "**              **\n",
-      "***            ***\n",
-      "****          ****\n",
-      "*****        *****\n",
-      "******      ******\n",
-      "*******    *******\n",
-      "********  ********\n",
-      "******************\n",
-      "********  ********\n",
-      "*******    *******\n",
-      "******      ******\n",
-      "*****        *****\n",
-      "****          ****\n",
-      "***            ***\n",
-      "**              **\n",
-      "*                *\n"
+      " *******\n",
+      "  *****\n",
+      "   ***\n",
+      "    *\n",
+      "**********\n",
+      "****  ****\n",
+      "***    ***\n",
+      "**      **\n",
+      "*        *\n",
+      "*        *\n",
+      "**      **\n",
+      "***    ***\n",
+      "****  ****\n",
+      "**********\n"
      ]
     }
    ],
@@ -800,22 +785,49 @@
     "        print()\n",
     "def drawf(size):\n",
     "    symbol = \"*\"\n",
-    "    Length = 10\n",
+    "    trianglerow = math.ceil(size/2)\n",
     "\n",
-    "    \n",
-    "        print(\" \" * (rows - rownumber) + charToDraw * (2 * rownumber - 1))\n",
+    "    for rownumber in range(trianglerow+1):\n",
+    "        print(\" \" * (trianglerow - rownumber) + symbol * (2 * rownumber - 1))\n",
+    "    for rownumber in range(trianglerow, 0 , -1):\n",
+    "        if rownumber == trianglerow:\n",
+    "            continue\n",
+    "        print(\" \" * (trianglerow - rownumber) + symbol * (2 * rownumber - 1))\n",
     "        \n",
     "        \n",
     "def drawrev(size):\n",
-    "    pass\n",
+    "    symbol = \"*\"\n",
+    "    half = math.ceil(size/2)\n",
+    "    \n",
+    "    # nữa hình trên\n",
+    "    for char in range(half, 0, -1):\n",
+    "        BlankSpaceLength = (half * 2)  - (char * 2)\n",
+    "        Space = \" \" * BlankSpaceLength\n",
+    "        print(symbol * char + Space + symbol * char )\n",
+    "    \n",
+    "    # nữa hình dưới\n",
+    "    for char in range(1,half  + 1):\n",
+    "        BlankSpaceLength = (half * 2)  - (char * 2)\n",
+    "        Space = \" \" * BlankSpaceLength\n",
+    "        print(symbol * char + Space + symbol * char ) \n",
+    "        \n",
+    "\n",
+    "    \n",
     "# def showShape(Matrixshape:np.array):\n",
     "#     for i in Matrixshape.shape()\n",
-    "if shape == 0:\n",
-    "    dra\n",
-    "    \n",
-    "drawtria(size)\n",
-    "drawpara(size)\n",
-    "drawf(size)"
+    "if shape ==1:\n",
+    "   drawtria(size)\n",
+    "elif shape ==2:\n",
+    "    drawpara(size)\n",
+    "elif shape == 3:\n",
+    "    drawf(size)\n",
+    "elif shape == 4:\n",
+    "    drawrev(size)  \n",
+    "else:     \n",
+    "    drawtria(size)\n",
+    "    drawpara(size)\n",
+    "    drawf(size)\n",
+    "    drawrev(size)"
    ]
   },
   {
@@ -851,8 +863,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thu bai"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -862,7 +882,38 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import turtle as t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "ename": "Terminator",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTerminator\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/rm/ky8lx3d91bng734zfb15m18m0000gn/T/ipykernel_2370/293306774.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mScreen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmainloop\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mspeed\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mup\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mforward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m200\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mleft\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m90\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdown\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcircle\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m200\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0msteps\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m6\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/turtle.py\u001B[0m in \u001B[0;36mspeed\u001B[0;34m(speed)\u001B[0m\n",
+      "\u001B[0;31mTerminator\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "t.Screen()\n",
+    "t.speed(10)\n",
+    "t.up();t.forward(200);t.left(90);t.down()\n",
+    "t.circle(200,steps=6)\n",
+    "t.done()\n",
+    "t."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "attachments": {},
@@ -956,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
   },
   "polyglot_notebook": {
    "kernelInfo": {
