--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -138,7 +138,7 @@
        "1152921504606846976"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -227,7 +227,7 @@
        "2.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -549,9 +549,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Happy birthday to Enter. \n",
-      "Happybirtday to Enter\n",
-      "Happy birthday, happy birthday, happy birthday to Enter\n"
+      "Happy birthday to . \n",
+      "Happybirtday to \n",
+      "Happy birthday, happy birthday, happy birthday to \n"
      ]
     }
    ],
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -588,11 +588,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Điểm nhập:3.0\n",
-      "Học lực: Kém - Không đạt\n"
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m grade \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mNhập điểm thí sinh:\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mXeploai\u001b[39m(hocluc:\u001b[39mstr\u001b[39m,dat:\u001b[39mbool\u001b[39m):\n\u001b[1;32m      3\u001b[0m     XL\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
      ]
     }
    ],
@@ -658,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -718,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -867,53 +870,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thu bai"
+    "Tap uoc so chung 2 so"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import turtle as t"
+    "def UocSo(Number):\n",
+    "    kq = []\n",
+    "    if Number <=1:\n",
+    "        return kq\n",
+    "    else:\n",
+    "        kq = [value for value in range(2,Number,1) if (Number%value==0)]\n",
+    "    return kq \n",
+    "\n",
+    "def Giao(TapA,TapB):\n",
+    "    kq = [value for value in TapA if (value in TapA and value in TapB)]\n",
+    "    return kq\n",
+    "def Printresult(Tapso):\n",
+    "    if Tapso ==[]:\n",
+    "        print('Khong co gia tri uoc so chung')\n",
+    "        return\n",
+    "    else:\n",
+    "        kq = sorted(Tapso)[-1]\n",
+    "        print(f'Uoc chung lon nhat la {kq}')\n",
+    "NumberA = int(input('Nhap So thu 1:'))\n",
+    "NumberB = int(input('Nhap so thu 2:'))\n",
+    "UocsoA = UocSo(NumberA)\n",
+    "UocsoB = UocSo(NumberB)\n",
+    "TapGiao = Giao(UocsoA,UocsoB)\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uoc so chung nhieu so"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "Terminator",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mTerminator\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/rm/ky8lx3d91bng734zfb15m18m0000gn/T/ipykernel_2370/293306774.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mScreen\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmainloop\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mspeed\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      4\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mup\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mforward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m200\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mleft\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m90\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m;\u001B[0m\u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mdown\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcircle\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m200\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0msteps\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;36m6\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/turtle.py\u001B[0m in \u001B[0;36mspeed\u001B[0;34m(speed)\u001B[0m\n",
-      "\u001B[0;31mTerminator\u001B[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Khong co gia tri uoc so chung\n",
+      "Uoc chung lon nhat la 2\n"
      ]
     }
    ],
    "source": [
-    "t.Screen()\n",
-    "t.speed(10)\n",
-    "t.up();t.forward(200);t.left(90);t.down()\n",
-    "t.circle(200,steps=6)\n",
-    "t.done()\n",
-    "t."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "Printresult(TapGiao)\n",
+    "def mulinput(*inputvalue):\n",
+    "    kq = []\n",
+    "    for Number in inputvalue:\n",
+    "        NhomUocso = UocSo(Number)\n",
+    "        if kq == []:\n",
+    "            kq=NhomUocso\n",
+    "        else:\n",
+    "            kq = Giao(kq, NhomUocso)\n",
+    "    Printresult(kq)\n",
+    "\n",
+    "mulinput(100,30,20,4)"
+   ]
   },
   {
    "attachments": {},
@@ -948,8 +975,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Ham Tang dan"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -958,8 +993,60 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ 1x2^0+ 2x2^1+ 3x2^2+ 4x2^3+ 5x2^4 = 129\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HammuTang(P,x):\n",
+    "    s=0\n",
+    "    ham=''\n",
+    "    for index in range(0,len(P),1):\n",
+    "        s+= P[index]* x**index\n",
+    "        ham += f'+ {P[index]}x{x}^{index}'\n",
+    "    print(ham,end=\" \")\n",
+    "    print(f'= {s}')\n",
+    "HammuTang([1,2,3,4,5], 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####Ham mu giam"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+ 5x2^0 + 4x2^1 + 3x2^2 + 2x2^3 + 1x2^4 = 57\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HammuGiam(P,x):\n",
+    "    s=0\n",
+    "    ham=''\n",
+    "    P = P[::-1]\n",
+    "    for index in range(len(P)):\n",
+    "        s+= P[index]* x**index\n",
+    "        ham += f'+ {P[index]}x{x}^{index} '\n",
+    "    print(ham,end=\"\")\n",
+    "    print(f'= {s}')\n",
+    "HammuGiam([1,2,3,4,5], 2)"
+   ]
   },
   {
    "attachments": {},
@@ -978,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -987,8 +1074,26 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " + 1x2^0 + 2x2^1 + 4x2^3 + 5x2^4 = 117\n"
+     ]
+    }
+   ],
+   "source": [
+    "def HammuTangplus(P,x):\n",
+    "    s=0\n",
+    "    ham=''\n",
+    "    for element in P:\n",
+    "        s+= P[element] * x**element\n",
+    "        ham += f' + {P[element]}x{x}^{element}'\n",
+    "    print(ham,end=\"\")\n",
+    "    print(f' = {s}')\n",
+    "HammuTangplus({0:1,1:2,3:4,4:5}, 2)"
+   ]
   }
  ],
  "metadata": {
@@ -1007,7 +1112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
+   "version": "3.10.8"
   },
   "polyglot_notebook": {
    "kernelInfo": {
