--- a/BT/Baitap1.ipynb
+++ b/BT/Baitap1.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -138,13 +138,14 @@
        "1152921504606846976"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result"
+    "result\n",
+    "# print(type(result))"
    ]
   },
   {
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -308,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -389,7 +390,7 @@
    },
    "outputs": [],
    "source": [
-    "resultc = (1 + F(\"2/3\")-F(\"1/4\"))*(F(4,5)-F(3,4))**2"
+    "resultc = (1 + F(\"2/3\")- F(\"1/4\"))*(F(4,5)-F(3,4))**2"
    ]
   },
   {
@@ -535,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -549,15 +550,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Happy birthday to . \n",
-      "Happybirtday to \n",
-      "Happy birthday, happy birthday, happy birthday to \n"
+      "Happy birthday to Tony. \n",
+      "Happybirtday to Tony\n",
+      "Happy birthday, happy birthday, happy birthday to Tony\n"
      ]
     }
    ],
    "source": [
     "name = input(\"Tên: \")\n",
-    "print(f\"Happy birthday to {name}. \\nHappybirtday to {name}\\nHappy birthday, happy birthday, happy birthday to {name}\")"
+    "print(f\"Happy birthday to {name}. \\nHappybirtday to {name}.\\nHappy birthday, happy birthday, happy birthday to {name}\")"
    ]
   },
   {
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -588,14 +589,11 @@
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m grade \u001b[39m=\u001b[39m \u001b[39mfloat\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mNhập điểm thí sinh:\u001b[39;49m\u001b[39m'\u001b[39;49m))\n\u001b[1;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mXeploai\u001b[39m(hocluc:\u001b[39mstr\u001b[39m,dat:\u001b[39mbool\u001b[39m):\n\u001b[1;32m      3\u001b[0m     XL\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Điểm nhập:2.0\n",
+      "Học lực: Kém - Không đạt\n"
      ]
     }
    ],
@@ -661,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -675,7 +673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "23\n"
      ]
     }
    ],
@@ -1019,7 +1017,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####Ham mu giam"
+    "#### Ham mu giam"
    ]
   },
   {
