--- a/21880005.ipynb
+++ b/21880005.ipynb
@@ -11,9 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
