--- a/21880005.ipynb
+++ b/21880005.ipynb
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Anaconda3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -157,11 +157,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 08:09:04) [Clang 14.0.6 ]"
+   "version": "3.9.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "240f023d94b4ff9081f1d4eabe665a0b3848dd35c5e6b3894d48a24ff221424b"
+    "hash": "cc67d78bd58aa5ec73e359c6ce5c2fafde3e9bb277d955f6f0989f3f23c98363"
    }
   }
  },
