--- a/21880005.ipynb
+++ b/21880005.ipynb
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -157,11 +157,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "cc67d78bd58aa5ec73e359c6ce5c2fafde3e9bb277d955f6f0989f3f23c98363"
+    "hash": "db665d71a2da8c2be2c4f3a237650f8bdbef41d171a7207d69c49142c8ee26e2"
    }
   }
  },
