--- a/BT/BT2/Baitap2.ipynb
+++ b/BT/BT2/Baitap2.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "MSSV: <...>\n",
+    "MSSV: 21880005\n",
     "\n",
-    "Họ và tên: <...>"
+    "Họ và tên: Pham Tuan Anh"
    ]
   },
   {
@@ -69,10 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = np.array(range(-2,2,0.05))\n",
+    "fig = plt.figure()\n",
+    "def line1(input):\n",
+    "    return float(input)\n",
+    "\n",
+    "Y = line1(X)\n",
+    "plt.plot(Y,X)\n",
+    "plt.show()"
+   ]
   },
   {
    "attachments": {},
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +244,7 @@
        "[1309 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +393,7 @@
        "[1309 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +422,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +516,7 @@
        "max      80.000000"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +540,7 @@
        "Name: survived, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,11 +615,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1046.000000\n",
+       "mean       29.881135\n",
+       "std        14.413500\n",
+       "min         0.166700\n",
+       "25%        21.000000\n",
+       "50%        28.000000\n",
+       "75%        39.000000\n",
+       "max        80.000000\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.age.describe()"
+   ]
   },
   {
    "attachments": {},
@@ -643,11 +679,71 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cau a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1046.000000\n",
+       "mean       29.881135\n",
+       "std        14.413500\n",
+       "min         0.166700\n",
+       "25%        21.000000\n",
+       "50%        28.000000\n",
+       "75%        39.000000\n",
+       "max        80.000000\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.age.describe()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cau b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'titanic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m survived \u001b[39m=\u001b[39m titanic[titanic[\u001b[39m'\u001b[39m\u001b[39msurvived\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m'\u001b[39m\u001b[39myes\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      2\u001b[0m deaded \u001b[39m=\u001b[39m  titanic[titanic[\u001b[39m'\u001b[39m\u001b[39msurvived\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m==\u001b[39m\u001b[39m'\u001b[39m\u001b[39mno\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m survived\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'titanic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "survived = titanic[titanic['survived']=='yes']\n",
+    "deaded =  titanic[titanic['survived']=='no']\n",
+    "survived.head()"
+   ]
   },
   {
    "attachments": {},
@@ -673,7 +769,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -691,7 +787,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "5179d32cf6ec497baf3f8a3ef987cc77c5d2dc691fdde20a56316522f61a7323"
+    "hash": "db665d71a2da8c2be2c4f3a237650f8bdbef41d171a7207d69c49142c8ee26e2"
    }
   }
  },
