--- a/BT/BT2/Baitap2.ipynb
+++ b/BT/BT2/Baitap2.ipynb
@@ -2058,7 +2058,7 @@
     "ax = f.add_subplot(1,1,1)\n",
     "survived_data = titanic.dropna()[['age','survived']]\n",
     "\n",
-    "sns.histplot(data=survived_data,ax=ax,stat='count',multiple='stack',x='age',palette=\"viridis\",hue='survived',element='poly',legend='True',bins=20)\n",
+    "sns.histplot(data=survived_data,ax=ax,stat='count',multiple='stack',x='age',palette=\"viridis\",hue='survived',element='poly',legend='True',bins=20,)\n",
     "ax.set_title('Histogram Xếp Chồng cho nhóm Sống(Yes)/Chết(No)')\n",
     "ax.set_xlabel('Age')\n",
     "ax.set_ylabel(\"Tần suất\")\n",
