--- a/BT/BT3/Baitap3.ipynb
+++ b/BT/BT3/Baitap3.ipynb
@@ -14431,21 +14431,21 @@
     "$$\n",
     "2. Xác suất lấy bi xanh từ hộp 1\n",
     "$$\n",
-    "P_x = \\sum {\\frac{Bi_{xi}} {Bi_i}} = \\frac{5} {8} * \\frac{1}{3} = 0.2083\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{5} {8} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "3. Biết bi lấy được là xanh, khả năng thuộc về hộp nào\n",
     "Xét tỷ trọng bi xanh trong mỗi hộp\n",
     "- Hộp 1: \n",
     "$$\n",
-    "\\frac{5} {8}\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{5} {8} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "- Hộp 2\n",
     "$$\n",
-    "\\frac{6} {10}\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{6} {10} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "- Hộp 3\n",
     "$$\n",
-    "\\frac{6} {12}\n",
+    "P_x = \\sum {\\frac{Bi_{x1}} {Bi_1}} = \\frac{6} {12} * \\frac{1}{3} = 0.2083\n",
     "$$\n",
     "=> Hộp 1 có tỷ trọng bi xanh lớn nhất trong khi xác suất lấy bi ngẫu nhiên mỗi hộp là như nhau nên khả năng lấy bi từ hộp 1 là cao nhất\n",
     "4. Phương pháp mô phỏng\n",
